--- a/main.ui
+++ b/main.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>4</number>
+      <number>5</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -340,6 +340,43 @@ border-color: rgb(0, 0, 0);</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_13">
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_14">
+         <item>
+          <widget class="QLabel" name="label_12">
+           <property name="text">
+            <string>Вывод информации</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_7">
+           <property name="maximumSize">
+            <size>
+             <width>200</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Скачать CRL</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_8">
+           <property name="maximumSize">
+            <size>
+             <width>200</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Проверить списки скачивания</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
         <layout class="QVBoxLayout" name="verticalLayout_12">
          <item>
           <widget class="QTabWidget" name="tabWidget_2">
@@ -370,13 +407,6 @@ border-color: rgb(0, 0, 0);</string>
             <widget class="QPushButton" name="pushButton_6">
              <property name="text">
               <string>Загрузить свой CRL лист</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="toolButton">
-             <property name="text">
-              <string>...</string>
              </property>
             </widget>
            </item>
@@ -412,28 +442,29 @@ border-color: rgb(0, 0, 0);</string>
                <item>
                 <widget class="QGroupBox" name="groupBox">
                  <property name="title">
-                  <string>GroupBox</string>
+                  <string>Логирование</string>
                  </property>
-                 <layout class="QHBoxLayout" name="horizontalLayout_11"/>
+                 <layout class="QHBoxLayout" name="horizontalLayout_11">
+                  <item>
+                   <widget class="QTextBrowser" name="textBrowser"/>
+                  </item>
+                 </layout>
                 </widget>
                </item>
               </layout>
-             </item>
-             <item>
-              <widget class="Line" name="line">
-               <property name="orientation">
-                <enum>Qt::Vertical</enum>
-               </property>
-              </widget>
              </item>
              <item>
               <layout class="QVBoxLayout" name="verticalLayout_24">
                <item>
                 <widget class="QGroupBox" name="groupBox_2">
                  <property name="title">
-                  <string>GroupBox</string>
+                  <string>Ошибки</string>
                  </property>
-                 <layout class="QHBoxLayout" name="horizontalLayout_12"/>
+                 <layout class="QHBoxLayout" name="horizontalLayout_12">
+                  <item>
+                   <widget class="QTextBrowser" name="textBrowser_2"/>
+                  </item>
+                 </layout>
                 </widget>
                </item>
               </layout>
@@ -449,42 +480,35 @@ border-color: rgb(0, 0, 0);</string>
              <item>
               <layout class="QVBoxLayout" name="verticalLayout_20">
                <item>
-                <widget class="QFrame" name="frame_5">
-                 <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
-                 </property>
-                 <property name="frameShadow">
-                  <enum>QFrame::Raised</enum>
+                <widget class="QGroupBox" name="groupBox_8">
+                 <property name="title">
+                  <string>Настройка директорий</string>
                  </property>
                  <layout class="QHBoxLayout" name="horizontalLayout_8">
-                  <property name="spacing">
-                   <number>0</number>
-                  </property>
-                  <property name="leftMargin">
-                   <number>0</number>
-                  </property>
-                  <property name="topMargin">
-                   <number>0</number>
-                  </property>
-                  <property name="rightMargin">
-                   <number>0</number>
-                  </property>
-                  <property name="bottomMargin">
-                   <number>0</number>
-                  </property>
                   <item>
                    <layout class="QVBoxLayout" name="verticalLayout_31">
-                    <item alignment="Qt::AlignTop">
-                     <widget class="QLabel" name="label_12">
-                      <property name="text">
-                       <string>Настройка директорий</string>
-                      </property>
-                     </widget>
-                    </item>
                     <item>
                      <layout class="QHBoxLayout" name="horizontalLayout_9">
+                      <property name="leftMargin">
+                       <number>5</number>
+                      </property>
+                      <property name="topMargin">
+                       <number>5</number>
+                      </property>
+                      <property name="rightMargin">
+                       <number>5</number>
+                      </property>
+                      <property name="bottomMargin">
+                       <number>5</number>
+                      </property>
                       <item alignment="Qt::AlignVCenter">
                        <widget class="QPushButton" name="pushButton_4">
+                        <property name="maximumSize">
+                         <size>
+                          <width>100</width>
+                          <height>16777215</height>
+                         </size>
+                        </property>
                         <property name="text">
                          <string>CRL</string>
                         </property>
@@ -492,6 +516,12 @@ border-color: rgb(0, 0, 0);</string>
                       </item>
                       <item alignment="Qt::AlignVCenter">
                        <widget class="QPushButton" name="pushButton_5">
+                        <property name="maximumSize">
+                         <size>
+                          <width>100</width>
+                          <height>16777215</height>
+                         </size>
+                        </property>
                         <property name="text">
                          <string>Сертификаты</string>
                         </property>
@@ -499,6 +529,12 @@ border-color: rgb(0, 0, 0);</string>
                       </item>
                       <item alignment="Qt::AlignVCenter">
                        <widget class="QPushButton" name="pushButton_3">
+                        <property name="maximumSize">
+                         <size>
+                          <width>100</width>
+                          <height>16777215</height>
+                         </size>
+                        </property>
                         <property name="text">
                          <string>Папка ЦУС'а</string>
                         </property>
@@ -509,16 +545,16 @@ border-color: rgb(0, 0, 0);</string>
                     <item>
                      <layout class="QVBoxLayout" name="verticalLayout_33">
                       <item>
-                       <widget class="QLabel" name="label_9">
+                       <widget class="QLabel" name="label_10">
                         <property name="text">
-                         <string>Аддрес 1</string>
+                         <string>Аддрес 2</string>
                         </property>
                        </widget>
                       </item>
                       <item>
-                       <widget class="QLabel" name="label_10">
+                       <widget class="QLabel" name="label_9">
                         <property name="text">
-                         <string>Аддрес 2</string>
+                         <string>Аддрес 1</string>
                         </property>
                        </widget>
                       </item>
@@ -541,13 +577,44 @@ border-color: rgb(0, 0, 0);</string>
              <item>
               <layout class="QVBoxLayout" name="verticalLayout_19">
                <item>
-                <widget class="QFrame" name="frame_6">
-                 <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
+                <widget class="QGroupBox" name="groupBox_3">
+                 <property name="title">
+                  <string>Варианты скачивания CRL</string>
                  </property>
-                 <property name="frameShadow">
-                  <enum>QFrame::Raised</enum>
-                 </property>
+                 <layout class="QHBoxLayout" name="horizontalLayout_13">
+                  <item>
+                   <layout class="QVBoxLayout" name="verticalLayout_32">
+                    <item>
+                     <widget class="QCheckBox" name="checkBox">
+                      <property name="text">
+                       <string>Основной список</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QCheckBox" name="checkBox_4">
+                      <property name="text">
+                       <string>Свой список</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QCheckBox" name="checkBox_3">
+                      <property name="text">
+                       <string>Скачивать по времени истечения CRL</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QCheckBox" name="checkBox_2">
+                      <property name="text">
+                       <string>Скачивать из альтернативных источников</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
                 </widget>
                </item>
               </layout>
@@ -555,12 +622,9 @@ border-color: rgb(0, 0, 0);</string>
              <item>
               <layout class="QVBoxLayout" name="verticalLayout_26">
                <item>
-                <widget class="QFrame" name="frame_9">
-                 <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
-                 </property>
-                 <property name="frameShadow">
-                  <enum>QFrame::Raised</enum>
+                <widget class="QGroupBox" name="groupBox_7">
+                 <property name="title">
+                  <string>Расписание скачивания</string>
                  </property>
                 </widget>
                </item>
@@ -579,13 +643,44 @@ border-color: rgb(0, 0, 0);</string>
                <item>
                 <layout class="QVBoxLayout" name="verticalLayout_22">
                  <item>
-                  <widget class="QFrame" name="frame_4">
-                   <property name="frameShape">
-                    <enum>QFrame::StyledPanel</enum>
+                  <widget class="QGroupBox" name="groupBox_4">
+                   <property name="title">
+                    <string>Окно программы</string>
                    </property>
-                   <property name="frameShadow">
-                    <enum>QFrame::Raised</enum>
-                   </property>
+                   <layout class="QHBoxLayout" name="horizontalLayout_17">
+                    <item>
+                     <layout class="QVBoxLayout" name="verticalLayout_34">
+                      <item>
+                       <widget class="QLabel" name="label_13">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_15">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_16">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_14">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                 </layout>
@@ -593,13 +688,44 @@ border-color: rgb(0, 0, 0);</string>
                <item>
                 <layout class="QVBoxLayout" name="verticalLayout_28">
                  <item>
-                  <widget class="QFrame" name="frame_12">
-                   <property name="frameShape">
-                    <enum>QFrame::StyledPanel</enum>
+                  <widget class="QGroupBox" name="groupBox_5">
+                   <property name="title">
+                    <string>Задержки скачивания</string>
                    </property>
-                   <property name="frameShadow">
-                    <enum>QFrame::Raised</enum>
-                   </property>
+                   <layout class="QHBoxLayout" name="horizontalLayout_16">
+                    <item>
+                     <layout class="QVBoxLayout" name="verticalLayout_35">
+                      <item>
+                       <widget class="QLabel" name="label_17">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_20">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_19">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_18">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                 </layout>
@@ -607,13 +733,44 @@ border-color: rgb(0, 0, 0);</string>
                <item>
                 <layout class="QVBoxLayout" name="verticalLayout_21">
                  <item>
-                  <widget class="QFrame" name="frame_10">
-                   <property name="frameShape">
-                    <enum>QFrame::StyledPanel</enum>
+                  <widget class="QGroupBox" name="groupBox_6">
+                   <property name="title">
+                    <string>Отображение данных во вкладках</string>
                    </property>
-                   <property name="frameShadow">
-                    <enum>QFrame::Raised</enum>
-                   </property>
+                   <layout class="QHBoxLayout" name="horizontalLayout_15">
+                    <item>
+                     <layout class="QVBoxLayout" name="verticalLayout_36">
+                      <item>
+                       <widget class="QLabel" name="label_21">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_23">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_24">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
+                       <widget class="QLabel" name="label_22">
+                        <property name="text">
+                         <string>TextLabel</string>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                 </layout>
