--- a/main.ui
+++ b/main.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>5</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -381,7 +381,7 @@ border-color: rgb(0, 0, 0);</string>
           <widget class="QPushButton" name="pushButton_7">
            <property name="maximumSize">
             <size>
-             <width>200</width>
+             <width>150</width>
              <height>16777215</height>
             </size>
            </property>
@@ -400,6 +400,19 @@ border-color: rgb(0, 0, 0);</string>
            </property>
            <property name="text">
             <string>Проверить списки скачивания</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_9">
+           <property name="maximumSize">
+            <size>
+             <width>150</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Копиолвать CRL в УЦ</string>
            </property>
           </widget>
          </item>
@@ -655,6 +668,40 @@ border-color: rgb(0, 0, 0);</string>
                  <property name="title">
                   <string>Расписание скачивания</string>
                  </property>
+                 <layout class="QHBoxLayout" name="horizontalLayout_18">
+                  <item>
+                   <layout class="QVBoxLayout" name="verticalLayout_37">
+                    <item>
+                     <widget class="QLabel" name="label_25">
+                      <property name="text">
+                       <string>TextLabel</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLabel" name="label_27">
+                      <property name="text">
+                       <string>TextLabel</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLabel" name="label_28">
+                      <property name="text">
+                       <string>TextLabel</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLabel" name="label_26">
+                      <property name="text">
+                       <string>TextLabel</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </item>
+                 </layout>
                 </widget>
                </item>
               </layout>
